prom-keycloak-proxy/overlays/nerc-ocp-obs/routes/prom-keycloak-proxy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prom-keycloak-proxy
spec:
  host: metrics.apps.obs.nerc.mghpcc.org
  to:
    kind: Service
    name: prom-keycloak-proxy
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
